crates/locus-core/tests/snapshots/regression_icra2020__icra_forward_checkerboard_grid.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.7011688311688311
  mean_rmse: 0.3854
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: 0005.png
      missed: 149
      extra: 0
      rmse: 0.4555
    - filename: 0004.png
      missed: 148
      extra: 0
      rmse: 0.473
    - filename: 0003.png
      missed: 148
      extra: 0
      rmse: 0.367
    - filename: 0001.png
      missed: 147
      extra: 0
      rmse: 0.499
    - filename: 0006.png
      missed: 146
      extra: 0
      rmse: 0.507
