crates/locus-core/tests/snapshots/regression_icra2020__icra_forward_checkerboard_sota.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.7302597402597403
  mean_rmse: 0.3317
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: 0003.png
      missed: 152
      extra: 0
      rmse: 0.2474
    - filename: 0004.png
      missed: 150
      extra: 0
      rmse: 0.4661
    - filename: 0001.png
      missed: 145
      extra: 0
      rmse: 0.5323
    - filename: 0000.png
      missed: 145
      extra: 0
      rmse: 0.499
    - filename: 0002.png
      missed: 144
      extra: 0
      rmse: 0.4033
