crates/locus-core/tests/snapshots/regression_icra2020__icra_forward_gwlf.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
assertion_line: 367
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.6546753246753247
  mean_rmse: 0.5596
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: 0001.png
      missed: 154
      extra: 0
      rmse: 0
    - filename: 0002.png
      missed: 154
      extra: 0
      rmse: 0
    - filename: 0003.png
      missed: 154
      extra: 0
      rmse: 0
    - filename: 0004.png
      missed: 154
      extra: 0
      rmse: 0
    - filename: 0005.png
      missed: 154
      extra: 0
      rmse: 0
