crates/locus-core/tests/snapshots/regression_icra2020__icra_forward_pure_default_edlines.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
assertion_line: 361
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.7112987012987013
  mean_rmse: 0.2638
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: 0001.png
      missed: 154
      extra: 0
      rmse: 0
    - filename: 0002.png
      missed: 154
      extra: 0
      rmse: 0
    - filename: 0000.png
      missed: 153
      extra: 0
      rmse: 0.4655
    - filename: 0004.png
      missed: 153
      extra: 0
      rmse: 0.3821
    - filename: 0003.png
      missed: 153
      extra: 0
      rmse: 0.3592
