crates/locus-core/tests/snapshots/regression_icra2020__icra_forward_pure_default_moments_culling.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
assertion_line: 380
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.7687012987012988
  mean_rmse: 0.2741
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: 0003.png
      missed: 147
      extra: 0
      rmse: 0.3009
    - filename: 0001.png
      missed: 145
      extra: 0
      rmse: 0.3584
    - filename: 0004.png
      missed: 145
      extra: 0
      rmse: 0.3406
    - filename: 0002.png
      missed: 145
      extra: 0
      rmse: 0.2924
    - filename: 0000.png
      missed: 143
      extra: 0
      rmse: 0.3898
