crates/locus-core/tests/snapshots/regression_icra2020__icra_forward_pure_default_rescue.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.7380519480519481
  mean_rmse: 0.3141
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: 0003.png
      missed: 149
      extra: 0
      rmse: 0.3586
    - filename: 0004.png
      missed: 148
      extra: 0
      rmse: 0.4603
    - filename: 0002.png
      missed: 146
      extra: 0
      rmse: 0.2673
    - filename: 0005.png
      missed: 145
      extra: 0
      rmse: 0.4157
    - filename: 0000.png
      missed: 145
      extra: 0
      rmse: 0.4049
