crates/locus-core/tests/snapshots/regression_icra2020__icra_forward_pure_default_sota_pure_tags.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.7516883116883117
  mean_rmse: 0.2747
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: 0003.png
      missed: 148
      extra: 0
      rmse: 0.2893
    - filename: 0004.png
      missed: 147
      extra: 0
      rmse: 0.3673
    - filename: 0001.png
      missed: 145
      extra: 0
      rmse: 0.3711
    - filename: 0000.png
      missed: 144
      extra: 0
      rmse: 0.3902
    - filename: 0005.png
      missed: 144
      extra: 0
      rmse: 0.3148
