crates/locus-core/tests/snapshots/regression_icra2020__icra_forward_pure_default_standard.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.7236363636363637
  mean_rmse: 0.3051
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: 0004.png
      missed: 151
      extra: 0
      rmse: 0.3434
    - filename: 0005.png
      missed: 146
      extra: 0
      rmse: 0.3751
    - filename: 0006.png
      missed: 146
      extra: 0
      rmse: 0.3649
    - filename: 0003.png
      missed: 146
      extra: 0
      rmse: 0.3099
    - filename: 0000.png
      missed: 144
      extra: 0
      rmse: 0.3881
