crates/locus-core/tests/snapshots/regression_icra2020__icra_forward_pure_max_recall_adaptive.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.7494805194805195
  mean_rmse: 0.245
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: 0004.png
      missed: 149
      extra: 0
      rmse: 0.3742
    - filename: 0003.png
      missed: 147
      extra: 0
      rmse: 0.36
    - filename: 0001.png
      missed: 146
      extra: 0
      rmse: 0.379
    - filename: 0006.png
      missed: 144
      extra: 0
      rmse: 0.3371
    - filename: 0005.png
      missed: 143
      extra: 0
      rmse: 0.342
